// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RewardsBuilder getAccountBalance returns 0 balance 1`] = `
Object {
  "balance": "0",
}
`;

exports[`RewardsBuilder getAccountBalance returns AccountBalanceModel 1`] = `
Object {
  "balance": "97675046319",
}
`;
